--- a/src/KeePassLib/KeePass.Models.csproj
+++ b/src/KeePassLib/KeePass.Models.csproj
@@ -123,8 +123,8 @@
     <Compile Include="KeePassInterfaces.cs" />
     <Compile Include="KeePassLibWrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadWriteKeePassEntry.cs" />
     <Compile Include="StreamUtils.cs" />
-    <Compile Include="XmlKeePassDatabase.cs" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
