--- a/src/KeePassWin/KeePassWin.csproj
+++ b/src/KeePassWin/KeePassWin.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Models\DatabaseGroupParameter.cs" />
     <Compile Include="IO\DialogDatabaseUnlocker.cs" />
     <Compile Include="Mvvm\PrismNavigationService.cs" />
+    <Compile Include="ViewModels\ReadWriteKeePassEntry.cs" />
     <Compile Include="Services\StorageItemFile.cs" />
     <Compile Include="Services\WindowsFilePicker.cs" />
     <Compile Include="ViewModels\PasswordDialogViewModel.cs" />
