--- a/src/KeePassWin/KeePassWin.csproj
+++ b/src/KeePassWin/KeePassWin.csproj
@@ -118,10 +118,14 @@
     <Compile Include="Mvvm\PrismNavigationService.cs" />
     <Compile Include="Services\StorageItemFile.cs" />
     <Compile Include="Services\WindowsFilePicker.cs" />
+    <Compile Include="ViewModels\NewDatabasePageViewModel.cs" />
     <Compile Include="ViewModels\PasswordDialogViewModel.cs" />
     <Compile Include="ViewModels\SearchPageViewModel.cs" />
     <Compile Include="Views\EntryViewDialog.xaml.cs">
       <DependentUpon>EntryViewDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\NewDatabasePage.xaml.cs">
+      <DependentUpon>NewDatabasePage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\SearchPage.xaml.cs">
       <DependentUpon>SearchPage.xaml</DependentUpon>
@@ -205,6 +209,10 @@
     <Page Include="Views\EntryViewDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\NewDatabasePage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\PasswordDialog.xaml">
       <SubType>Designer</SubType>
