--- a/NuGet.config
+++ b/NuGet.config
@@ -2,6 +2,6 @@
 <configuration>
   <packageSources>
     <add key="nuget" value="https://www.nuget.org/api/v2/" />
-    <add key="tools" value="https://www.myget.org/F/tws-library/api/v3/index.json" />
+    <add key="keepass" value="https://www.myget.org/F/keepass/api/v3/index.json" />
   </packageSources>
 </configuration>
