--- a/src/KeePassLib/KeePass.Models.csproj
+++ b/src/KeePassLib/KeePass.Models.csproj
@@ -126,8 +126,10 @@
     <Compile Include="KeePassInterfaces.cs" />
     <Compile Include="KbdxKeePass.cs" />
     <Compile Include="KeePassSettings.cs" />
+    <Compile Include="KeyboardShortcuts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadWriteKeePassEntry.cs" />
+    <Compile Include="ShortcutName.cs" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
