--- a/src/KeePassLib/project.json
+++ b/src/KeePassLib/project.json
@@ -2,7 +2,7 @@
   "supports": {},
   "dependencies": {
     "KeePassLib": "2.34.0-ci0028",
-    "Microsoft.NETCore": "5.0.1"
+    "NETStandard.Library": "1.6.0"
   },
   "frameworks": {
     "netstandard1.3": {}
