--- a/src/KeePassLib/KeePass.Models.csproj
+++ b/src/KeePassLib/KeePass.Models.csproj
@@ -113,8 +113,8 @@
     <Compile Include="FileExtensions.cs" />
     <Compile Include="IClipboard.cs" />
     <Compile Include="IDatabaseTracker.cs" />
-    <Compile Include="IDatabaseUnlocker.cs" />
-    <Compile Include="IDatabaseUnlockerDialog.cs" />
+    <Compile Include="IKdbxUnlocker.cs" />
+    <Compile Include="IDatabaseCache.cs" />
     <Compile Include="IFile.cs" />
     <Compile Include="IFilePicker.cs" />
     <Compile Include="KdbxBuilder.cs" />
