--- a/src/KeePassLib/KeePass.Models.csproj
+++ b/src/KeePassLib/KeePass.Models.csproj
@@ -112,7 +112,7 @@
     <Compile Include="DatabaseUnlockException.cs" />
     <Compile Include="FileExtensions.cs" />
     <Compile Include="IClipboard.cs" />
-    <Compile Include="IDatabaseTracker.cs" />
+    <Compile Include="IDatabaseFileAccess.cs" />
     <Compile Include="IKdbxUnlocker.cs" />
     <Compile Include="IDatabaseCache.cs" />
     <Compile Include="IFile.cs" />
