--- a/src/KeePassWin/KeePassWin.csproj
+++ b/src/KeePassWin/KeePassWin.csproj
@@ -114,7 +114,9 @@
     <Compile Include="Converters\AutoSuggestQueryParameterConverter.cs" />
     <Compile Include="Converters\NullObjectVisibilityConverter.cs" />
     <Compile Include="Converters\UriVisibilityConverter.cs" />
+    <Compile Include="Log\ILogView.cs" />
     <Compile Include="Log\SerilogLogger.cs" />
+    <Compile Include="Log\StringBuilderSink.cs" />
     <Compile Include="Services\DataPackageClipboard.cs" />
     <Compile Include="Services\FileDatabaseTracker.cs" />
     <Compile Include="INavigator.cs" />
