Add mail client for logs

--- a/src/KeePassLib/KeePass.Models.csproj
+++ b/src/KeePassLib/KeePass.Models.csproj
@@ -118,6 +118,7 @@
     <Compile Include="IFile.cs" />
     <Compile Include="IFilePicker.cs" />
     <Compile Include="ILogger.cs" />
+    <Compile Include="IMailClient.cs" />
     <Compile Include="KeePassCredentials.cs" />
     <Compile Include="KeePassEntryWithParent.cs" />
     <Compile Include="KeePassExtensions.cs" />
