--- a/src/KeePassWin/KeePassWin.csproj
+++ b/src/KeePassWin/KeePassWin.csproj
@@ -102,6 +102,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="AppModel\IBackgroundEnteredAware.cs" />
     <Compile Include="AppShell.xaml.cs">
       <DependentUpon>AppShell.xaml</DependentUpon>
     </Compile>
@@ -109,6 +110,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Compile Include="AutofacExtensions.cs" />
     <Compile Include="Controls\BreadCrumbView.cs" />
     <Compile Include="Controls\MasterDetailsView.cs" />
     <Compile Include="Converters\AutoSuggestQueryParameterConverter.cs" />
