Add attached property for global shortcuts

--- a/src/KeePassWin/KeePassWin.csproj
+++ b/src/KeePassWin/KeePassWin.csproj
@@ -96,6 +96,7 @@
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
     <None Include="KeePassWin_StoreKey.pfx" />
     <None Include="KeePassWin_TemporaryKey.pfx" />
+    <Compile Include="Mvvm\Keyboard.Focus.cs" />
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
