--- a/src/KeePassWin/KeePassWin.csproj
+++ b/src/KeePassWin/KeePassWin.csproj
@@ -96,6 +96,7 @@
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
     <None Include="KeePassWin_StoreKey.pfx" />
     <None Include="KeePassWin_TemporaryKey.pfx" />
+    <Compile Include="IContentDialogResult.cs" />
     <Compile Include="Mvvm\Keyboard.Focus.cs" />
     <None Include="project.json" />
   </ItemGroup>
@@ -120,6 +121,7 @@
     <Compile Include="Log\ILogView.cs" />
     <Compile Include="Log\SerilogLogger.cs" />
     <Compile Include="Log\StringBuilderSink.cs" />
+    <Compile Include="Mvvm\Keyboard.Dialog.cs" />
     <Compile Include="Services\DataPackageClipboard.cs" />
     <Compile Include="Services\FileDatabaseTracker.cs" />
     <Compile Include="INavigator.cs" />
