--- a/src/KeePassLib/KeePass.Models.csproj
+++ b/src/KeePassLib/KeePass.Models.csproj
@@ -119,6 +119,7 @@
     <Compile Include="IFilePicker.cs" />
     <Compile Include="ILogger.cs" />
     <Compile Include="IMailClient.cs" />
+    <Compile Include="INameProvider.cs" />
     <Compile Include="InvalidCredentialsException.cs" />
     <Compile Include="KeePassCredentials.cs" />
     <Compile Include="KeePassExtensions.cs" />
