Add simple toast notification

--- a/src/KeePassWin/project.json
+++ b/src/KeePassWin/project.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "Autofac": "4.1.1",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
+    "Microsoft.Toolkit.Uwp.Notifications": "1.2.0",
     "Microsoft.Toolkit.Uwp.UI.Controls": "1.2.0",
     "Prism.Autofac": "6.2.0",
     "Serilog": "2.3.0",
