--- a/src/KeePassWin/KeePassWin.csproj
+++ b/src/KeePassWin/KeePassWin.csproj
@@ -100,6 +100,7 @@
       <DependentUpon>NameBoxDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="IContentDialogResult.cs" />
+    <Compile Include="Mvvm\ComboBox.cs" />
     <Compile Include="Mvvm\Keyboard.Focus.cs" />
     <Compile Include="Mvvm\Keyboard.Shortcut.cs" />
     <None Include="project.json" />
