Add resource strings for keyboard shortcuts

--- a/src/KeePassWin/KeePassWin.csproj
+++ b/src/KeePassWin/KeePassWin.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Mvvm\Keyboard.Focus.cs" />
     <Compile Include="Mvvm\Keyboard.Shortcut.cs" />
     <None Include="project.json" />
+    <PRIResource Include="Resources\en\ShortcutNames.resw" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
