--- a/src/KeePassWin/KeePassWin.csproj
+++ b/src/KeePassWin/KeePassWin.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Mvvm\Keyboard.Focus.cs" />
     <Compile Include="Mvvm\Keyboard.Shortcut.cs" />
     <None Include="project.json" />
+    <PRIResource Include="Resources\en\Resources.resw" />
     <PRIResource Include="Resources\en\ShortcutNames.resw" />
   </ItemGroup>
   <ItemGroup>
@@ -164,7 +165,6 @@
       <DependentUpon>LocalizedStrings.resw</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\DatabasePageViewModel.cs" />
-    <Compile Include="ViewModels\MainPageViewModel.cs" />
     <Compile Include="ViewModels\MenuItemViewModel.cs" />
     <Compile Include="ViewModels\MenuViewModel.cs" />
     <Compile Include="Views\MainPage.xaml.cs">
