--- a/test/KeePassLib.Test/KeePassLib.Test.csproj
+++ b/test/KeePassLib.Test/KeePassLib.Test.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DatabaseCacheTests.cs" />
+    <Compile Include="DatabaseGroupParameterTests.cs" />
     <Compile Include="KdbxDatabaseCacheTests.cs" />
     <Compile Include="FileExtensionsTests.cs" />
     <Compile Include="Utils\TestAssets.cs" />
