Clean up master details view
Bringing in the source of the latest master/details until it is merged in and available

--- a/src/KeePassWin/KeePassWin.csproj
+++ b/src/KeePassWin/KeePassWin.csproj
@@ -96,6 +96,10 @@
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
     <None Include="KeePassWin_StoreKey.pfx" />
     <None Include="KeePassWin_TemporaryKey.pfx" />
+    <Compile Include="Controls\MasterDetailsView\MasterDetailsView.cs" />
+    <Compile Include="Controls\MasterDetailsView\MasterDetailsView.Events.cs" />
+    <Compile Include="Controls\MasterDetailsView\MasterDetailsView.Properties.cs" />
+    <Compile Include="Controls\MasterDetailsView\MasterDetailsViewState.cs" />
     <Compile Include="Controls\NameBoxDialog.xaml.cs">
       <DependentUpon>NameBoxDialog.xaml</DependentUpon>
     </Compile>
