--- a/src/KeePass.Win.ViewModels/project.json
+++ b/src/KeePass.Win.ViewModels/project.json
@@ -1,7 +1,6 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.0",
-    "Prism.Autofac": "6.2.0"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.0"
   },
   "frameworks": {
     "uap10.0": {}
