--- a/src/KeePassWin/KeePassWin.csproj
+++ b/src/KeePassWin/KeePassWin.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Mvvm\ComboBox.cs" />
     <Compile Include="Mvvm\Keyboard.Focus.cs" />
     <Compile Include="Mvvm\Keyboard.Shortcut.cs" />
+    <Compile Include="Mvvm\Autofac.Autowire.cs" />
     <None Include="project.json" />
     <PRIResource Include="Resources\en\ShareStrings.resw" />
     <PRIResource Include="Resources\en\Resources.resw" />
