--- a/src/KeePass.Win.Services/KeePass.Win.Services.csproj
+++ b/src/KeePass.Win.Services/KeePass.Win.Services.csproj
@@ -103,10 +103,6 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
-    <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
-    <None Include="project.json" />
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="DataPackageClipboard.cs" />
     <Compile Include="FileDatabaseTracker.cs" />
     <Compile Include="LocalizedStrings.cs" />
@@ -119,6 +115,10 @@
     <Compile Include="WindowsLauncher.cs" />
     <Compile Include="WinKeePassSettings.cs" />
     <EmbeddedResource Include="Properties\KeePass.Win.Services.rd.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="5.3.0" />
+    <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="1.2.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\KeePassLib\KeePass.Models.csproj">
