--- a/src/KeePassWin/KeePassWin.csproj
+++ b/src/KeePassWin/KeePassWin.csproj
@@ -248,13 +248,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="4.3.0" />
-    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="5.3.0" />
-    <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="1.2.0" />
-    <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls" Version="1.2.0" />
-    <PackageReference Include="Prism.Autofac" Version="6.2.0" />
-    <PackageReference Include="Serilog" Version="2.4.0" />
-    <PackageReference Include="Serilog.Sinks.Trace" Version="2.1.0" />
+    <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\KeePass.Win.Services\KeePass.Win.Services.csproj">
